--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>CATculator</title>
-    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&family=Patrick+Hand&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/barsic.png" type="image/x-icon">
+    <body class="sea">
     <div id="result">
-        <input type="text" id="field" placeholder="" >
+        <input type="text" id="field" placeholder="" autocomplete="off">
     </div>
     <div id="panel">
         <div id="buttons">
             <button  class="button" id="ac">ac</button>
             <button  class="button" id="brackets">( )</button>
-            <button  class="button" id="cat"><img  id="cat-img"  src="images/white.png" alt="'w'"></button>
+            <button  class="button" id="cat"><img  id="cat-img"  src="images/blue.png" alt="'w'"></button>
             <button  class="button" id="divide">/</button>
              
             <button  class="button" id="seven">7</button>
